[package]
name = "petra_grid_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "petra_grid"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.18.0"
petra_grid = "1.0.0"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
